# Valk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  valk.py
config/: default.yaml
core/: __init__.py  engine.py  interactsh.py  logger.py  models.py  plugins.py  providers.py  regression.py  reporter.py  session.py  stealth.py
modules/: __init__.py  base.py
modules/attack/: __init__.py  context_injection.py  data_exfil.py  guardrail_bypass.py  indirect_injection.py  jailbreak.py  multi_turn_escalation.py  output_injection.py  prompt_extraction.py  rag_poisoning.py  sti_function_hijack.py  sti_role_escalation.py  sti_role_injection.py  token_limit_dos.py
modules/fingerprint/: __init__.py  capability_map.py  contradiction.py  identity_probe.py  knowledge_cutoff.py  rag_detection.py  template_inference.py  token_recon.py
modules/recon/: __init__.py  auth_probe.py  endpoint_discovery.py
payloads/: data_exfil.yaml  encodings.yaml  endpoints.yaml  escalation_chains.yaml  events.yaml  extractions.yaml  indirect_injection.yaml  jailbreaks.yaml  output_injection.yaml  personas.yaml  rag_poisoning.yaml  regression_baselines.yaml  special_tokens.yaml  sti_templates.yaml
tests/: test_detections.py
